<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_card"
    android:paddingHorizontal="20dp"
    android:paddingVertical="40dp"
    tools:context=".ui.fragments.task.fragment.TaskDetailFragment">

    <LinearLayout
        android:id="@+id/content_detail"
        android:padding="5dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black_transparent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:text="@string/app_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:text="@string/hour" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:text="@string/date" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:text="@string/description" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="5"
            android:padding="8dp"
            android:scrollbars="vertical"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            tools:text="Esta es una descripción de ejemplo que puede ocupar varias líneas en el TextView." />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>