<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addspent.AddSpentActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingVertical="10dp"
                android:text="Agregar Gasto"
                android:textAllCaps="true"
                android:textColor="@color/secondary" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/AppTheme.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="0dp"
                android:layout_marginVertical="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    style="@style/AppTheme.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/expense_name"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/AppTheme.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="0dp"
                android:layout_marginVertical="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etExpenseAmount"
                    style="@style/AppTheme.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/expense_amount"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilAutocomplete"
                style="@style/AutoCompleteTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginVertical="0dp"
                android:hint="@string/category"
                app:endIconDrawable="@drawable/ic_autocomplete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilPassword">

                <TextView
                    android:id="@+id/tvCategoryLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/actAutocomplete"
                    android:text="@string/category" />

                <AutoCompleteTextView
                    android:id="@+id/actAutocomplete"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:inputType="none"
                    android:textColor="@color/secondary"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/AppTheme.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="0dp"
                android:layout_marginVertical="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="top"
                    android:hint="Descripción"
                    android:inputType="textMultiLine"
                    android:maxLines="4" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/layout_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/date"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/iv_calendar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_calender" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSaveExpense"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_background_selector"
                android:enabled="false"
                android:paddingHorizontal="20dp"
                android:text="@string/save"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>